Fixed member cards on mobile view

--- a/CompetitionTeam.css
+++ b/CompetitionTeam.css
@@ -90,9 +90,7 @@ body {
 }
   
   .roster-container {
-    width: 80%;
     margin: auto;
-    padding: 20px;
 }
   
 /* Header */
@@ -123,11 +121,12 @@ header p {
 .member-card {
     display: flex;
     align-items: center;
-    margin: 20px 0;
+    margin: 1rem auto;
     background-color: #1e1e1e;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
     border-radius: 8px;
     overflow: hidden;
+    max-width: 800px;
 }
 
 .member-photo {
